# labMan

./: .gitignore  README.md  THEMING.md  USAGE.md  app.py  populate_test_data.py  pyproject.toml  test_email.py
.github/workflows/: release.yml
labman/: cli.py  server.py
labman-v2/: GROUPS_COMPLETE.md  QUICKSTART.md  README.md  SUCCESS.md  TESTING_GROUPS.md
labman-v2/backend/: .env.example  conf.toml  create_tables.py  env.toml  init_db.py  initial_data.py  labman.db  main.py  pyproject.toml  run.sh  setup.sh
labman-v2/backend/app/: config.py  database.py  main.py
labman-v2/backend/app/api/: __init__.py  admin.py  audit.py  auth.py  books.py  content.py  deps.py  groups.py  inventory.py  meetings.py  research.py  servers.py  users.py
labman-v2/backend/app/models/: __init__.py  auth.py  book.py  content.py  group.py  group_project.py  inventory.py  meeting.py  research.py  server.py  user.py
labman-v2/backend/app/schemas/: __init__.py  audit.py  book.py  content.py  group.py  group_project.py  inventory.py  meeting.py  research.py  server.py  user.py
labman-v2/backend/app/services/: __init__.py  audit.py  auth.py  email.py  file_storage.py
labman-v2/backend/app/utils/: security.py
labman-v2/backend/migrations/: add_inventory_server_fields.py
labman-v2/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
labman-v2/frontend/src/: App.tsx  index.tsx
labman-v2/frontend/src/components/: Layout.tsx  MarkdownTextarea.tsx
labman-v2/frontend/src/pages/: Account.tsx  ActivityHistory.tsx  Admin.tsx  Dashboard.tsx  GroupDetail.tsx  GroupProject.tsx  Groups.tsx  Inventory.tsx  Login.tsx  MeetingDetail.tsx  Meetings.tsx  MyResearch.tsx  Servers.tsx  UserResearch.tsx  Users.tsx
labman-v2/frontend/src/services/: admin.ts  api.ts  audit.ts  auth.ts  books.ts  content.ts  groups.ts  inventory.ts  meetings.ts  research.ts  servers.ts  users.ts
labman/lib/: auth.py  content.py  data.py  email_service.py  groups.py  helpers.py  ics_generator.py  inventory.py  meetings.py  research.py  users.py  validators.py
labman/static/css/: style.css
labman/static/js/: theme-switcher.js
labman/templates/: audit_history.html  base.html  dashboard.html  group_detail.html  group_form.html  groups.html  meeting_detail.html  meeting_form.html  meetings.html  member_research.html  research.html  server_form.html  theme_test.html  users.html
labman/tests/: populate_test_data.py  test_security.py
lib/: auth.py  content.py  data.py  groups.py  inventory.py  meetings.py  research.py  servers.py  users.py
templates/: base.html  content.html  content_form.html  dashboard.html  group_detail.html  group_form.html  meeting_detail.html  meeting_form.html  meetings.html  users.html
(+18 files in other folders)
