[project]
name = "labMan"
version = "0.1.0"
authors = [ { name="Lokesh Mohanty", email="lokesh1197@gmail.com" } ]
description = "Academic Lab Management System"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "werkzeug>=3.1.5",
    "click>=8.1.7",
    "gunicorn>=23.0.0",
    "python-crontab>=3.2.0",
]

[project.scripts]
labman = "labman.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.8.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "labman"
module-root = ""

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[project.urls]
Homepage = "https://github.com/lokeshmohanty/labman"
Issues = "https://github.com/lokeshmohanty/labman/issues"
Documentation = "https://github.com/lokeshmohanty/labman/README.md"
